Add starting destinations

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
-
 <div class="container">
 <div class="destination-container">
 <div class="destination" id="florida">
 <h2>Florida</h2>
 </div>
-
+  <div class="destination" id="mays">
+  
+<h2> mays </h2>
+</div>
 <div class="destination" id="paris">
 <h2>Paris</h2>
 </div>
